# infra-controller-core

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile-build.toml  Makefile-package.toml  Makefile.toml  README.md  STYLE_GUIDE.md  skaffold.yml
.github/workflows/: build-boot-artifacts.yml  ci.yaml  docker-build.yml  fern-docs-ci.yml  notify-build-status.yml  promotion.yaml  release.yaml  sync-openapi.yml
bluefield/: Makefile.toml
bluefield/misc/: nico-dpu-agent.service  nico-dpu-otel-agent.service
bluefield/otel/: otel_config.yaml  otelcol-wrapper  otelcol-wrapper-imports-dpf
book/: README.md  book.toml
book/src/: SUMMARY.md
crates/admin-cli/: Cargo.toml  DEVELOPMENT.md
crates/agent/: Cargo.toml  example_agent_config.toml
crates/agent-mock-api-server/: Cargo.toml  build.rs
crates/api/: Cargo.toml  casbin-policy.csv
crates/api-db/: Cargo.toml
crates/api-model/: Cargo.toml
crates/api-test-helper/: Cargo.toml
crates/bmc-mock/: Cargo.toml
crates/bmc-proxy/: Cargo.toml  README.md
crates/libnmxc/: Cargo.toml  build.rs
crates/libnmxc/src/: lib.rs  nmxc_api.rs
crates/libnmxc/tests/: Cargo.toml  hello.rs
crates/libnmxc/tests/src/: main.rs  main.rs.old
deploy/: DNS.md  README.md
dev/: kea-dhcp4.conf.example
docs/: README.md  dpu-operations.md  glossary.md  index.md  index.yml  release-notes.md
fern/: docs.yml
helm/: Chart.yaml  PREREQUISITES.md  README.md  values.yaml
helm-prereqs/: README.md  clean.sh  health-check.sh  helmfile.yaml  preflight.sh  setup.sh  unseal_vault.sh  values.yaml
pxe/: Makefile.toml
(+1773 files in other folders)
